--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="map_place_image_diameter">48dp</dimen>
     <dimen name="map_place_image_stroke">2dp</dimen>
+
+    <dimen name="rhythm_space_half">4dp</dimen>
+    <dimen name="rhythm_space_single">8dp</dimen>
+    <dimen name="rhythm_space_double">16dp</dimen>
 </resources>
