--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -21,12 +21,16 @@
         android:paddingRight="@dimen/rhythm_space_double"
         android:paddingTop="@dimen/rhythm_space_single"
         android:paddingBottom="@dimen/rhythm_space_single"
-        android:background="#5999">
+        android:background="#6000">
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            android:textColor="@android:color/white"
+            android:maxLines="1"
+            android:lines="1"
+            android:ellipsize="end"
             tools:text="Bar Something"/>
 
     </FrameLayout>
